<resources>
    <string name="app_name">Travel Journal</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="facebook_app_id">3213388475614328</string>
    <string name="fb_login_protocol_scheme">fb614729179949870</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">User email address</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_share">Share</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="photo_uploaded">Photo Uploaded</string>
    <string name="tripName">Trip name</string>
    <string name="tripType">Trip type</string>
    <string name="tripPrice">Trip price</string>
    <string name="tripRating">Trip rating</string>
    <string name="update_trip">Update trip</string>
    <string name="destination">Destination</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="price_eur">Price (EUR):</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="add_trip">Add trip</string>
    <string name="start_date_view_trip">Start Date:</string>
    <string name="end_date_view_trip">End Date:</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="author_name">An app by Tudor Mihai-Eugen</string>
</resources>