<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.NewTripActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/side_nav_bar">

        <ImageView
            android:id="@+id/previousMenuImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:minWidth="24dp"
            android:minHeight="24dp"
            android:onClick="onClickReturnToHome"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <Button
            android:id="@+id/addTripButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:minHeight="48dp"
            android:onClick="addTripOnClick"
            android:text="@string/add_trip"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tripNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/tripName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/destinationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/destination"
                    android:minHeight="48dp" />

                <RadioGroup
                    android:id="@+id/tripTypeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <RadioButton
                        android:id="@+id/radioButtonCityBreak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dimgrey"
                        android:minHeight="48dp"
                        android:text="@string/city_break" />

                    <RadioButton
                        android:id="@+id/radioButtonSeaSide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dimgrey"
                        android:minHeight="48dp"
                        android:text="@string/sea_side" />

                    <RadioButton
                        android:id="@+id/radioButtonMountain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dimgrey"
                        android:minHeight="48dp"
                        android:text="@string/mountains" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/priceEUR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_eur"/>

                    <TextView
                        android:id="@+id/showPriceEUR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/priceSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:max="5000"
                        android:progress="100"
                        android:thumb="@drawable/ic_baseline_adjust_24"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/startDateButton"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@color/dimgrey"
                        android:onClick="onClickPickStartDate"
                        android:text="@string/start_date"
                        android:textColor="@android:color/white"
                        tools:ignore="TextContrastCheck" />

                    <Button
                        android:id="@+id/endDateButton"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@color/dimgrey"
                        android:onClick="onClickPickEndDate"
                        android:text="@string/end_date"
                        android:textColor="@android:color/white"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/startDateTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/endDateTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/ratingBarTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:numStars="5"
                        android:stepSize="0.5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/uploadedPhotoImageView"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_baseline_photo_24"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/openGalleryImageView"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_photo_library_24"/>

                <ImageView
                    android:id="@+id/openCameraImageView"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_menu_camera"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>


